--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-cssnano": "^2.1.1",
     "gulp-data": "^1.2.1",
     "gulp-eslint": "^3.0.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
@@ -50,8 +51,8 @@
     "gulp-load-plugins": "^1.2.4",
     "gulp-modernizr": "^1.0.0-alpha",
     "gulp-nunjucks-render": "2.0.0",
-    "gulp-postcss": "^6.1.1",
     "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^6.1.1",
     "gulp-prettify": "^0.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
